# 7z-rs

./: CHANGELOG.adoc  CONTRIBUTING.adoc  COPYING  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md  justfile
.github/workflows/: CI.yaml
doc/spec/: 7zFormat.txt  Methods.txt  README.adoc
examples/: create.rs  extract.rs  list.rs
license/: MIT
src/: error.rs  filetime.rs  lib.rs  property.rs
