[package]
name = "sz"
version = "0.0.1"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.56.0"
description = "A library for reading/writing the 7z format"
documentation = "https://docs.rs/sz"
readme = "README.md"
repository = "https://github.com/sorairolake/7z-rs"
license = "Apache-2.0 OR MIT"
keywords = ["7z", "archive"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
