[package]
name = "sz"
version = "0.0.1"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.62.0"
description = "A library for reading/writing the 7z format"
documentation = "https://docs.rs/sz"
readme = "README.md"
repository = "https://github.com/sorairolake/7z-rs"
license = "Apache-2.0 OR MIT"
keywords = ["7z", "archive"]
categories = ["parsing"]
exclude = [
  "/.github",
  "/clippy.toml",
  "/doc",
  "/examples",
  "/justfile",
  "/rustfmt.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.38"
time = { version = "0.3.18", features = ["macros"], optional = true }

[dev-dependencies]
clap = { version = "3.2.23", features = ["derive"] }

[features]
default = ["time"]
large-dates = ["time/large-dates"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
